# midnight-zk

./: .git-commit-msg.txt  .gitignore  .release.toml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  PROTOGALAXY_DEBUG_SESSION.md  README.md  bench_commits.sh  midnight-extractor.rs
aggregator/: CHANGELOG.md  Cargo.toml
aggregator/src/: inner_product_argument.rs  lib.rs  light_aggregator.rs  light_fiat_shamir.rs  light_self_emulation.rs  light_verifier.rs
aggregator/src/light_aggregator/: mod.rs
circuits/: .license_headers.sh  .license_midnight.txt  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
circuits/.cargo/: config.toml
circuits/benches/: poseidon_cpu.rs  zswap_output.rs
circuits/examples/: bingo.rs  bitcoin_ecdsa_threshold.rs  bitcoin_signature.rs  ecc_ops.rs  ecdsa.rs  exposing_types.rs  folding.rs  hybrid_mt.rs  ivc.rs  json_parsing.rs  json_parsing_full.rs  json_parsing_partial.rs  json_verification.rs  membership.rs  native_gadget.rs  parse_filecoin_srs.rs  parsing_example.rs  pilar_verify.rs  poseidon.rs  rsa_signature.rs  schnorr_sig.rs  sha_preimage.rs  zswap_output.rs
circuits/examples/identity/: enrollment.rs  full_credential.rs  json_verification.rs  mod.rs  property_check.rs  utils.rs
circuits/goldenfiles/: cost-model.json
circuits/goldenfiles/examples/: AtalaJsonECDSA  BitcoinThresholdECDSA  CredentialEnrollment  CredentialProperty  EccExample  FullCredential  HybridMtExample  MembershipExample  NativeGadgetExample  PoseidonExample  RSASignatureCircuit  SchnorrExample  ShaPreImageCircuit
circuits/scripts/: foreign_params_gen.py
circuits/src/: circuit_field.rs  compact_std_lib.rs  lib.rs  wasm.rs
circuits/src/biguint/: biguint_gadget.rs  mod.rs  types.rs
circuits/src/ecc/: curves.rs  mod.rs
circuits/src/ecc/foreign/: common.rs  ecc_chip.rs  edwards_chip.rs  mod.rs  weierstrass_chip.rs
circuits/src/ecc/hash_to_curve/: htc_gadget.rs  mod.rs  mtc.rs  mtc_cpu.rs  mtc_params.rs
circuits/src/ecc/native/: edwards_chip.rs  mod.rs
circuits/src/field/: mod.rs
circuits/src/field/decomposition/: chip.rs  cpu_utils.rs  instructions.rs  mod.rs  pow2range.rs  tests.rs
circuits/src/field/foreign/: field_chip.rs  mod.rs  params.rs  util.rs
circuits/src/field/native/: mod.rs  native_chip.rs  native_gadget.rs
circuits/src/hash/: mod.rs  util.rs  utils.rs
circuits/src/hash/new_sha256/: gates.rs  mod.rs  sha256_chip.rs  types.rs  utils.rs
circuits/src/hash/poseidon/: mod.rs  (+4 more)
circuits/src/instructions/: arithmetic.rs  assertions.rs  assignments.rs  base64.rs  binary.rs  bitwise.rs  canonicity.rs  comparison.rs  control_flow.rs  conversions.rs  decomposition.rs  division.rs  divmod.rs  ecc.rs  equality.rs  field.rs  hash.rs  hash_to_curve.rs  map.rs  mod.rs  native.rs  public_input.rs  range_check.rs  scalar_field.rs  sponge.rs  vector.rs  zero.rs
circuits/src/json/: automaton.rs  automaton_chip.rs  base64_chip.rs  data_types.rs  mod.rs  parser_gadget.rs  regex.rs
circuits/src/map/: cpu.rs  map_gadget.rs  mod.rs
circuits/src/parsing/: automaton.rs  automaton_chip.rs  base64_chip.rs  data_types.rs  mod.rs  native_automaton.rs  parser_chip.rs  parser_gadget.rs  regex.rs  serialization.rs  specs.rs  table.rs
circuits/src/pilar/: instructions.rs  mod.rs  pilar_chip.rs  poseidon.rs
circuits/src/utils/: circuit_modeling.rs  composable.rs  ecdsa.rs  extraction.rs  mod.rs  plonk_api.rs  test_native_gadget.rs  test_std_lib.rs  types.rs  util.rs  vector.rs
circuits/src/vec/: mod.rs  vector.rs  vector_gadget.rs
circuits/src/verifier/: accumulator.rs  kzg.rs  lookup.rs  mod.rs  msm.rs  pcs.rs  permutation.rs  traces.rs  transcript_chip.rs  transcript_gadget.rs  trash.rs  types.rs  utils.rs  vanishing.rs  verifier_gadget.rs
circuits/tests/: check_vks.rs  public_inputs.rs  serialization.rs
circuits/tests/static_vks/: AtalaEnrollmentVk  AtalaJsonECDSAVk  BitcoinThresholdECDSAVk  CredentialEnrollmentVk  CredentialPropertyVk  EccExampleVk  HybridMtExampleVk  MembershipExampleVk  NativeGadgetExampleVk  PoseidonExampleVk  RSASignatureCircuitVk  SchnorrExampleVk  ShaPreImageCircuitVk  ZSwapOutputCircuitVk
curves/: CHANGELOG.md  Cargo.toml  README.md
curves/benches/: ec.rs  field_arith.rs  h_commit.rs  msm.rs  pairing.rs
curves/src/: arithmetic.rs  curve.rs  fft.rs  field_encoding.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  g1.rs  g2.rs  gt.rs  hash_to_curve.rs  lib.rs  macros.rs  msm.rs  pairing.rs  serde.rs  serde_impl.rs  serde_traits.rs  wasm_msm.rs
curves/src/bls12_381/: bls_pairing.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  g1.rs  g2.rs  gt.rs  mod.rs  pairing.rs
curves/src/bn256/: compressed.rs  curve.rs  curve_impl.rs  engine.rs  ext_field.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  macro_curve.rs  mod.rs
curves/src/curve25519/: affine.rs  curve.rs  fp.rs  mod.rs
curves/src/derive/: curve.rs  mod.rs  pairing.rs
curves/src/ff_ext/: cubic.rs  inverse.rs  jacobi.rs  mod.rs  quadratic.rs
curves/src/jubjub/: curve.rs  fr.rs  mod.rs
curves/src/k256/: base_field.rs  curve.rs  mod.rs
curves/src/p256/: curve.rs  mod.rs
curves/src/secp256k1/: curve.rs  fp.rs  fq.rs  mod.rs
curves/src/tests/: curve.rs  engine.rs  field.rs  field_halo2curves.rs  mod.rs  pairing.rs
curves/src/utils/: mod.rs  u256.rs  u384.rs  ux.rs
extractor/support/: Cargo.toml
extractor/support/src/: cells.rs  circuit.rs  error.rs  fields.rs  lib.rs  macros.rs
proof-system/: Cargo.toml  README.md
proof-system/benches/: commit_zk.rs  dev_lookup.rs  hashtocurve.rs  plonk.rs
proof-system/examples/: circuit-layout.rs  proof-size.rs  serialization.rs  simple-example.rs  two-chip.rs  vector-mul.rs  vector-ops-unblinded.rs
proof-system/src/circuit/: value.rs
proof-system/src/dev/: cost_model.rs  gates.rs  mod.rs  tfp.rs
proof-system/src/plonk/: circuit.rs  error.rs  keygen.rs  mod.rs  prover.rs  verifier.rs
proof-system/src/poly/: commitment.rs  domain.rs  mod.rs  query.rs
proof-system/src/transcript/: implementors.rs  mod.rs
proof-system/src/utils/: arithmetic.rs  helpers.rs
proof-system/tests/: plonk_api.rs
(+627 files in other folders)
