[workspace]

members = [
    "proof-system",
    "curves",
]

[workspace.dependencies]
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.7.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1" # MSRV 1.66.0
sha3 = "0.9.1"
rand_chacha = "0.3"
rayon = "1.8"
