[package]
name = "midnight-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
rand = "0.8"
pasta_curves = "0.5"
halo2curves = { version = "0.7.0", features = ["derive_serde"] }
# todo: tmp repo until https://github.com/davidnevadoc/blstrs/pull/12 is merged
blstrs = { git = "https://github.com/iquerejeta/blstrs", rev = "eafc641" }
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", rev = "5bb4fdb" , default-features = false, features = ["batch", "bits", "cost-estimator"]}
group = "0.13"
num-bigint = "0.4"
const_num_bigint = "0.2.1"
num-traits = "0.2"
subtle = "2.5"
ff = "0.13"
num-integer = "0.1"
uint = "0.9.2"
blake2b_simd = "1.0.1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8.8", optional = true }
sha2 = "0.10.8"
bitvec = "1.0.1"
base64 = "0.13.0"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.3.1"
num-bigint = { version = "0.4", features = ["rand"] }
goldenfile = "1.7.1"
serde_json = "1.0"
pasta_curves = "0.5"
proptest = "1.2.0"
itertools = "0.12"
dhat = "0.3"
parking_lot = "0.12.3"
bellman = "0.14.0"

[features]
default = []
regression = ["serde", "serde_derive", "serde_json", "toml"]
# Feature that exposes some testing functionality, such as load from scratch or instantiable
testing = []
# Feature to check vk in examples without running the proofs
check_vk = []
heap_profiling = []

# Allows to extract debug symbols to do mem/perf profiling while aiming for maximum performance
[profile.heap_profiling]
inherits = "release"
opt-level = 3
debug = 1

# Paths of examples, to be able to organise them in folders
[[example]]
name = "setup"
path = "examples/big_machine/setup.rs"

[[example]]
name = "key_generation"
path = "examples/big_machine/key_generation.rs"

[[example]]
name = "proof_generation"
path = "examples/big_machine/proof_generation.rs"

[[example]]
name = "proof_verification"
path = "examples/big_machine/proof_verification.rs"

[[example]]
name = "json_verification"
path = "examples/json_verification.rs"
