[package]
name = "midnight-circuits"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
rand = "0.8"
pasta_curves = "0.5"
halo2curves = { version = "0.7.0", features = ["derive_serde"] }
blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", rev = "04db20e", default-features = false, features = [
    "bits",
    "cost-estimator",
    "circuit-params",
] }
group = "0.13"
num-bigint = { version = "0.4" }
const_num_bigint = "0.2.1"
num-traits = "0.2"
subtle = "2.5"
ff = "0.13"
num-integer = "0.1"
uint = "0.9.2"
blake2b_simd = "1.0.1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8.8", optional = true }
sha2 = "0.10.8"
bitvec = "1.0.1"
base64 = "0.13.0"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.3.1"
goldenfile = "1.7.1"
num-bigint = { version = "0.4", features = ["rand"] }
serde_json = "1.0"
pasta_curves = "0.5"
proptest = "1.2.0"
itertools = "0.12"
dhat = "0.3"
parking_lot = "0.12.3"
bellman = "0.14.0"

[features]
default = []
regression = ["serde", "serde_derive", "serde_json", "toml"]
# Feature that exposes some testing functionality, such as load from scratch or instantiable
testing = ["num-bigint/rand"]
heap_profiling = []
# Enable truncated challenges. This makes recursive proofs more efficient
truncated-challenges = ["halo2_proofs/truncated-challenges"]

# Allows to extract debug symbols to do mem/perf profiling while aiming for maximum performance
[profile.heap_profiling]
inherits = "release"
opt-level = 3
debug = 1

[[example]]
name = "json_verification"
path = "examples/json_verification.rs"

[[bench]]
name = "poseidon_cpu"
harness = false
