[package]
name = "midnight-circuits"
version = "5.0.1"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = { workspace = true }
ff = { workspace = true }
rustc-hash = "2"
blake2b_simd = { workspace = true }
midnight-curves = { path = "../curves", version = "0.1.1" }
midnight-proofs = { path = "../proofs", version = "0.5.1", default-features = false, features = [
    "circuit-params",
    "committed-instances",
] }

# DO NOT MERGE BEFORE THIS IS ADDRESSED. 
# For now, the build requires to have a local version of the *updated* keccak and blake2b. 
# Replace this by the commented repos and the correct commit or tag, once the two repos are 
# updated. Build fails with the current state of their repo.
keccak = { git = "https://github.com/alexandroszacharakis8/sha3-circuit", branch = "irakoton@midnight-update", package = "sha3-circuit" }
blake2b = { git = "https://github.com/irakoton/blake2b_halo2_integration", branch = "irakoton@midnight-update", package = "blake2b_halo2" }
# keccak = { git = "https://github.com/alexandroszacharakis8/sha3-circuit", rev = "27d17caf00fd77bc767890fd4bdd661b6d49f20c", package = "sha3-circuit" }
# blake2b = { git = "https://github.com/eryxcoop/blake2b_halo2", rev = "f3269732175efb2684680a6eaa1de2dd25e6e589", package = "blake2b_halo2" }

serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
rand = { workspace = true }

num-bigint = { version = "0.4" }
num-traits = "0.2"
num-integer = "0.1"
subtle = "2.6"
base64 = "0.13.1"
lazy_static = "1.5.0"
bincode = "2.0"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.7"
rand_chacha = "0.3.1"
goldenfile = "=1.8.0"
num-bigint = { workspace = true, features = ["rand"] }
serde_json = { workspace = true }
itertools = "0.14"
dhat = "0.3"
bellman = "0.14.0"
serial_test = "3.2.0"
sha3 = "0.10.0"

[target.'cfg(ci_build)'.dependencies]
midnight-curves = { path = "../curves", features = ["portable"] }

[features]
default = []
# Feature that exposes some testing functionality, such as load from scratch or instantiable
testing = ["num-bigint/rand"]
heap_profiling = []
# Enable truncated challenges. This makes recursive proofs more efficient
truncated-challenges = ["midnight-proofs/truncated-challenges"]
# Enable development curves (BN256, Pasta)
dev-curves = ["midnight-curves/dev-curves", "midnight-proofs/dev-curves"]

[lib]
bench = false

[[example]]
name = "cred_full"
path = "examples/identity/full_credential.rs"

[[example]]
name = "cred_enrollment"
path = "examples/identity/enrollment.rs"

[[example]]
name = "cred_property"
path = "examples/identity/property_check.rs"

[[bench]]
name = "poseidon_cpu"
harness = false
