[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.7.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"
rust-version = "1.63"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "0.3.15", default-features = true }
rand_core = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
pairing_lib = { version = "0.23", package = "pairing" }
subtle = "2.5"
rand = "0.8"
bitvec = "1.0.1"
pasta_curves = "0.5.0"
halo2curves = { workspace = true }


serde = { version = "1.0", features = ["derive"], optional = true }
byte-slice-cast = "1.0.0"
num-bigint = "0.4.6"

[dev-dependencies]
rayon = "1.8"
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"
criterion = { version = "0.3", features = ["html_reports"] }
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["serde"]
portable = ["blst/portable"]
h2c_compare = []
__private_bench = []


## Benchmarks

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1


[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "pairing"
harness = false
