[package]
name = "midnight-curves"
description = "Implementation of the BLS12-381, JubJub, secp256k1, secp256r1 and Curve25519 curves."
version = "0.3.1"
authors = ["dignifiedquire <me@dignifiedquire.com>", "Midnight team"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/midnightntwrk/midnight-zk/"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
blst = { version = "0.3.15", default-features = true }
pairing = { version = "0.23" }
subtle = "2.6"
bitvec = "1.0.1"
byte-slice-cast = "1.2.3"
num-bigint = "0.4.6"

rand_core = { workspace = true }
ff = { workspace = true }
group = { workspace = true, features = ["tests"] }
rayon = "1.10"
paste = "1.0"
lazy_static = "1.4"

# For curve25519 implementation
curve25519-dalek = { version = "4.1.3", features = ["group"] }

# For BN256 (dev-curves only)
halo2derive = { version = "0.2.0", optional = true }

# Needed for feature unification of `generic-array` required by k256/p256
# point serialization; not referenced directly.
sha2 = "0.10"
digest = "0.10"

# k256 for secp256k1
k256 = { version = "0.13.4", features = ["expose-field", "bits", "alloc"], default-features = false }

# p256 for secp256r1 / NIST P-256
p256 = { version = "0.13.2", features = ["expose-field", "bits", "alloc", "arithmetic"], default-features = false }
primeorder = "0.13"

[dev-dependencies]
rand_xorshift = "0.3.0"
rand = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }
ark-std = "0.6"
halo2derive = "0.2.0"
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = []
portable = ["blst/portable"]
dev-curves = ["dep:halo2derive"]

[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "pairing"
harness = false
